--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Pika Pong</title>
+        <link rel="stylesheet" href="./css/style.css">
         <script src="./js/index.js" type="module"></script>
     </head>
     <body>
