--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,16 +1,26 @@
 <DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8" />
 
-        <!-- IE의 버전에 따라 다르게 보여지는 것을 처리하는 부분 -->
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Pika Pong</title>
-        <link rel="stylesheet" href="./css/style.css">
-        <script src="./js/index.js" type="module"></script>
-    </head>
-    <body>
-        <div id="app"></div>
-    </body>
-</html>
+            <!-- IE의 버전에 따라 다르게 보여지는 것을 처리하는 부분 -->
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+            <meta
+                name="viewport"
+                content="width=device-width, initial-scale=1.0"
+            />
+            <title>Pika Pong</title>
+            <link
+                rel="stylesheet"
+                href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+                integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+                crossorigin="anonymous"
+            />
+            <link rel="stylesheet" href="./css/style.css" />
+            <script src="./js/index.js" type="module"></script>
+        </head>
+        <body>
+            <div id="app"></div>
+        </body>
+    </html>
+</DOCTYPE>
