--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,9 @@
 
             <!-- IE의 버전에 따라 다르게 보여지는 것을 처리하는 부분 -->
             <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-            <meta
-                name="viewport"
-                content="width=device-width, initial-scale=1.0"
-            />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title>Pika Pong</title>
+            <link rel="stylesheet" href="./css/style.css" />
             <script
                 src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
                 integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -27,7 +24,6 @@
                 integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
                 crossorigin="anonymous"
             />
-            <link rel="stylesheet" href="./css/style.css" />
             <script src="./js/index.js" type="module"></script>
         </head>
         <body>
