--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title>Pika Pong</title>
             <link rel="stylesheet" href="./css/style.css" />
+            <script type="importmap">
+                {
+                    "imports": {
+                        "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+                        "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+                    }
+                }
+            </script>
             <script
                 src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
                 integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
